page2 done with animation

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="hero-text-container">
-          <div class="poison-text-hero" data-scroll data-scroll-speed="8">
+          <div class="poison-text-hero" data-scroll data-scroll-speed="3">
             <h1 class="text-large-360">POISON</h1>
           </div>
           <div class="drag-ball">
@@ -67,6 +67,57 @@
           </div>
         </div>
       </section>
+
+      <section class="image-section">
+        <div class="image-section-container">
+          <div class="page2-image-section">
+            <div class="pg2-content">
+              <img src="https://framerusercontent.com/images/esH6YRxCm7u3sVIAWm4uUI7Uk0.jpg" alt="Image 1" />
+              <div class="pg2-image-text-overly">
+                <div class="pg2-img-head">
+                  <h1 class="text-lg-184">GARDEN</h1>
+                </div>
+                <div class="page2-img-bottom">
+                  <h5 class="text-sm-24">E-Commerce</h5>
+                  <h5 class="text-sm-24">2023</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="page2-image-section page2-image-section-ani">
+            <div class="pg2-content">
+              <img src="https://framerusercontent.com/images/ddyKmIkEyC9JBH9ye1BWOIMeQ.jpg" alt="Image 2" />
+              <div class="pg2-image-text-overly">
+                <div class="pg2-img-head">
+                  <h1 class="text-lg-184">NOMADE</h1>
+                </div>
+                <div class="page2-img-bottom">
+                  <h5 class="text-sm-24">Experience</h5>
+                  <h5 class="text-sm-24">2023</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="page2-image-section page2-image-section-ani">
+            <div class="pg2-content">
+              <img src="https://framerusercontent.com/images/GrKjcZGbmsogDjKYUAwjzDOkXSg.jpg" alt="Image 2" />
+              <div class="pg2-image-text-overly">
+                <div class="pg2-img-head">
+                  <h1 class="text-lg-184">OFF/COURSE</h1>
+                </div>
+                <div class="page2-img-bottom">
+                  <h5 class="text-sm-24">Digital</h5>
+                  <h5 class="text-sm-24">2023</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+      
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
