homepage half daone

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     />
 
     <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
     />
@@ -72,7 +77,10 @@
         <div class="image-section-container">
           <div class="page2-image-section">
             <div class="pg2-content">
-              <img src="https://framerusercontent.com/images/esH6YRxCm7u3sVIAWm4uUI7Uk0.jpg" alt="Image 1" />
+              <img
+                src="https://framerusercontent.com/images/esH6YRxCm7u3sVIAWm4uUI7Uk0.jpg"
+                alt="Image 1"
+              />
               <div class="pg2-image-text-overly">
                 <div class="pg2-img-head">
                   <h1 class="text-lg-184">GARDEN</h1>
@@ -87,7 +95,10 @@
 
           <div class="page2-image-section page2-image-section-ani">
             <div class="pg2-content">
-              <img src="https://framerusercontent.com/images/ddyKmIkEyC9JBH9ye1BWOIMeQ.jpg" alt="Image 2" />
+              <img
+                src="https://framerusercontent.com/images/ddyKmIkEyC9JBH9ye1BWOIMeQ.jpg"
+                alt="Image 2"
+              />
               <div class="pg2-image-text-overly">
                 <div class="pg2-img-head">
                   <h1 class="text-lg-184">NOMADE</h1>
@@ -102,7 +113,10 @@
 
           <div class="page2-image-section page2-image-section-ani">
             <div class="pg2-content">
-              <img src="https://framerusercontent.com/images/GrKjcZGbmsogDjKYUAwjzDOkXSg.jpg" alt="Image 2" />
+              <img
+                src="https://framerusercontent.com/images/GrKjcZGbmsogDjKYUAwjzDOkXSg.jpg"
+                alt="Image 2"
+              />
               <div class="pg2-image-text-overly">
                 <div class="pg2-img-head">
                   <h1 class="text-lg-184">OFF/COURSE</h1>
@@ -114,10 +128,106 @@
               </div>
             </div>
           </div>
-
         </div>
       </section>
-      
+
+      <div class="cta-section">
+        <div class="view-project-btn">
+          <h3 class="text-sm-24">All Projects</h3>
+        </div>
+        <div class="arrow-right-down">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 256 256"
+            focusable="false"
+            color="#fff"
+            style="
+              user-select: none;
+              width: 100%;
+              height: 100%;
+              display: inline-block;
+              fill: #fff;
+              color: #fff;
+              flex-shrink: 0;
+            "
+          >
+            <g
+              color="var(--token-0b9f0605-f09c-44f3-a24d-9ec926d574e6, rgb(128, 129, 131))"
+              weight="regular"
+            >
+              <path
+                d="M200,88V192a8,8,0,0,1-8,8H88a8,8,0,0,1,0-16h84.69L58.34,69.66A8,8,0,0,1,69.66,58.34L184,172.69V88a8,8,0,0,1,16,0Z"
+              ></path>
+            </g>
+          </svg>
+        </div>
+      </div>
+
+      <section class="our-services-section">
+        <div class="our-services-head">
+          <p class="text-sm-24">
+            Welcome to Poison, where innovation knows no bounds. We are not your
+            typical creative agency. We are visionaries, craftsmen, and
+            pioneers, dedicated to redefining creativity in a way that
+            transcends the ordinary. Our mission? To propel your brand into
+            uncharted territories, crafting unforgettable experiences that
+            resonate, inspire, and endure.
+          </p>
+        </div>
+        <div class="our-services-bottom">
+          <aside class="our-services-title">
+            <h4 class="text-sm-24">Our Services</h4>
+          </aside>
+          <aside class="our-services-list">
+            <h5 class="text-sm-24">Website Design and Development</h5>
+            <h5 class="text-sm-24">Search Engine Optimization</h5>
+            <h5 class="text-sm-24">Social Media Management</h5>
+            <h5 class="text-sm-24">E-commerce Solutions</h5>
+            <h5 class="text-sm-24">E-commerce Solutions Graphic</h5>
+            <h5 class="text-sm-24">Design and Branding</h5>
+            <h5 class="text-sm-24">Content Strategy and Planning</h5>
+          </aside>
+        </div>
+      </section>
+
+      <section class="marquee-section">
+        <div class="marquee-container">
+          <div class="marquee-text marquee-text-right">
+            <h1 class="text-lg-160">Evolution</h1>
+          </div>
+
+          <div class="marquee-text marquee-text-left">
+            <h1 class="text-lg-160">Evolution</h1>
+            <h1 class="text-lg-160 text-gray">Evolution</h1>
+          </div>
+
+          <div class="marquee-text marquee-text-right">
+            <h1 class="text-lg-160">Evolution</h1>
+          </div>
+        </div>
+        <div class="marquee-section-bottom">
+          <p class="text-sm-24 text-gray">
+            We embrace change, nurturing ideas that evolve into groundbreaking
+            solutions.
+          </p>
+        </div>
+      </section>
+
+      <section class="magnet-card-section">
+        <div class="magnet-card-container">
+          <div class="magnet-card">
+            <h3 class="text-md-77">
+              Evolution
+            </h3>
+
+            <p class="text-sm-16">We breathe life into concepts, creating vibrant experiences that captivate.</p>
+
+            <div class="card-svg-elem">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="width: 100%; height: 100%"><use href="#svg2639118242"></use></svg>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
