done till magnet card page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="hero-text-container">
-          <div class="poison-text-hero" data-scroll data-scroll-speed="3">
+          <div class="poison-text-hero">
             <h1 class="text-large-360">POISON</h1>
           </div>
           <div class="drag-ball">
@@ -220,12 +220,35 @@
               Evolution
             </h3>
 
-            <p class="text-sm-16">We breathe life into concepts, creating vibrant experiences that captivate.</p>
+            <p class="text-sm-16">We breathe life into concepts, <br> creating vibrant experiences <br> that captivate.</p>
 
             <div class="card-svg-elem">
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="width: 100%; height: 100%"><use href="#svg2639118242"></use></svg>
+              <img src="./resources/eye-illustration.jpg" alt="">
             </div>
           </div>
+
+        </div>
+        <div class="magnet-card-container">
+          <div class="magnet-card">
+            <h3 class="text-md-77">
+              SYNCHRO
+            </h3>
+
+            <p class="text-sm-16">Our synergy with clients  <br> ensures perfect harmony in  <br> every project.</p>
+
+            <div class="card-svg-elem">
+              <img src="./resources/eye-illustration.jpg" alt="">
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="our-team-section">
+        <div class="our-team-marquee-bg">
+          <h1 class="text-lg-184"> OUR TEAM</h1>
+          <h1 class="text-lg-184"> OUR TEAM</h1>
+          <h1 class="text-lg-184"> OUR TEAM</h1>
         </div>
       </section>
     </main>
