our-team-section done

--- a/index.html
+++ b/index.html
@@ -216,39 +216,110 @@
       <section class="magnet-card-section">
         <div class="magnet-card-container">
           <div class="magnet-card">
-            <h3 class="text-md-77">
-              Evolution
-            </h3>
+            <h3 class="text-md-77">Evolution</h3>
 
-            <p class="text-sm-16">We breathe life into concepts, <br> creating vibrant experiences <br> that captivate.</p>
+            <p class="text-sm-16">
+              We breathe life into concepts, <br />
+              creating vibrant experiences <br />
+              that captivate.
+            </p>
 
             <div class="card-svg-elem">
-              <img src="./resources/eye-illustration.jpg" alt="">
+              <img src="./resources/eye-illustration.jpg" alt="" />
             </div>
           </div>
-
         </div>
         <div class="magnet-card-container">
           <div class="magnet-card">
-            <h3 class="text-md-77">
-              SYNCHRO
-            </h3>
+            <h3 class="text-md-77">SYNCHRO</h3>
 
-            <p class="text-sm-16">Our synergy with clients  <br> ensures perfect harmony in  <br> every project.</p>
+            <p class="text-sm-16">
+              Our synergy with clients <br />
+              ensures perfect harmony in <br />
+              every project.
+            </p>
 
             <div class="card-svg-elem">
-              <img src="./resources/eye-illustration.jpg" alt="">
+              <img src="./resources/eye-illustration.jpg" alt="" />
             </div>
           </div>
-
         </div>
       </section>
 
       <section class="our-team-section">
         <div class="our-team-marquee-bg">
-          <h1 class="text-lg-184"> OUR TEAM</h1>
-          <h1 class="text-lg-184"> OUR TEAM</h1>
-          <h1 class="text-lg-184"> OUR TEAM</h1>
+          <h1 class="text-lg-184">OUR TEAM</h1>
+          <h1 class="text-lg-184">OUR TEAM</h1>
+          <h1 class="text-lg-184">OUR TEAM</h1>
+          <h1 class="text-lg-184">OUR TEAM</h1>
+          <h1 class="text-lg-184">OUR TEAM</h1>
+        </div>
+        <div class="our-team-container">
+          <aside class="our-team-left team-card-container">
+            <div class="our-team-member">
+              <img
+                src="https://framerusercontent.com/images/rmF6nr9brZo8ebe6klIHP2fSws.jpg"
+                alt=""
+              />
+              <div class="team-member-details">
+                <h4 class="text-md-77">AVA</h4>
+                <p class="text-sm-16">Creative Director</p>
+              </div>
+            </div>
+            <div class="our-team-member">
+              <img
+                src="https://framerusercontent.com/images/P5Nddj1X9qhX4SS5c6sXXQvxkEE.jpg"
+                alt=""
+              />
+              <div class="team-member-details">
+                <h4 class="text-md-77">JAMES</h4>
+                <p class="text-sm-16">UX Designer</p>
+              </div>
+            </div>
+            <div class="our-team-member">
+              <img
+                src="https://framerusercontent.com/images/YdIhyWDioJxfViSYKkMprSzkBms.jpg"
+                alt=""
+              />
+              <div class="team-member-details">
+                <h4 class="text-md-77">JAMES</h4>
+                <p class="text-sm-16">UX Designer</p>
+              </div>
+            </div>
+          </aside>
+
+          <aside class="our-team-right team-card-container">
+            <div class="our-team-member">
+              <img
+                src="https://framerusercontent.com/images/GrTpMr0YpMthaBLkRXe1XXvFoc.jpg"
+                alt=""
+              />
+              <div class="team-member-details">
+                <h4 class="text-md-77">JAMES</h4>
+                <p class="text-sm-16">UX Designer</p>
+              </div>
+            </div>
+            <div class="our-team-member">
+              <img
+                src="https://framerusercontent.com/images/alsjB8AOmjcUP66NBWFFSZt8KM.jpg"
+                alt=""
+              />
+              <div class="team-member-details">
+                <h4 class="text-md-77">JAMES</h4>
+                <p class="text-sm-16">UX Designer</p>
+              </div>
+            </div>
+            <div class="our-team-member">
+              <img
+                src="https://framerusercontent.com/images/bhWH8l1qOm81GdY4eFlIoLaF9o.jpg"
+                alt=""
+              />
+              <div class="team-member-details">
+                <h4 class="text-md-77">JAMES</h4>
+                <p class="text-sm-16">UX Designer</p>
+              </div>
+            </div>
+          </aside>
         </div>
       </section>
     </main>
