desktop version done

--- a/index.html
+++ b/index.html
@@ -322,6 +322,46 @@
           </aside>
         </div>
       </section>
+
+
+      <footer class="footer-section">
+        <aside class="footer-right">
+          <h1 class="text-lg-180">GET IN TOUCH</h1>
+        </aside>
+        <aside class="footer-left">
+          <div class="footer-left-head">
+            <h4 class="text-sm-24">Share Your Project. Let's  <br>Create Great Work Together.</h4>
+          </div>
+          <div class="footer-left-mid">
+            <div class="footer-contactus-elem">
+          
+              <h4 class="text-sm-24"><i class="ri-send-plane-line"></i></h4>
+              <h4 class="text-sm-24">hello@poisontemplate.com</h4>
+            </div>
+            <div class="footer-contactus-elem">
+          
+              <h4 class="text-sm-24"><i class="ri-phone-line"></i></h4>
+              <h4 class="text-sm-24">1 999 9999</h4>
+            </div>
+          </div>
+          <div class="footer-social-links">
+            <h5 class="text-sm-16">Instagram</h5>
+            <h5 class="text-sm-16">Linkdin</h5>
+            <h5 class="text-sm-16">Twitter</h5>
+          </div>
+        </aside>
+      </footer>
+
+
+      <section class="nav-bar bottom-nav">
+        <nav class="nav">
+          <div class="nav-links">
+            <p class="text-sm-16">Work</p>
+            <p class="text-sm-16">About</p>
+            <p class="text-sm-16">Contact</p>
+          </div>
+        </nav>
+      </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
