checking some image bugs

--- a/index.html
+++ b/index.html
@@ -38,29 +38,30 @@
         <div class="hero-slider-container">
           <div class="hero-image-section">
             <img
-              src="https://framerusercontent.com/images/ddyKmIkEyC9JBH9ye1BWOIMeQ.jpg"
+              src="./resources/IMG1.jpg"
               alt="Image 1"
             />
             <img
-              src="https://framerusercontent.com/images/GrKjcZGbmsogDjKYUAwjzDOkXSg.jpg"
+              src="./resources/IMG2.jpg"
               alt="Image 2"
             />
             <img
-              src="https://framerusercontent.com/images/esH6YRxCm7u3sVIAWm4uUI7Uk0.jpg"
+              src="./resources/IMG3.jpg"
               alt="Image 3"
             />
             <img
-              src="https://framerusercontent.com/images/ddyKmIkEyC9JBH9ye1BWOIMeQ.jpg"
+              src="./resources/IMG1.jpg"
               alt="Image 1"
             />
             <img
-              src="https://framerusercontent.com/images/GrKjcZGbmsogDjKYUAwjzDOkXSg.jpg"
+              src="./resources/IMG2.jpg"
               alt="Image 2"
             />
             <img
-              src="https://framerusercontent.com/images/esH6YRxCm7u3sVIAWm4uUI7Uk0.jpg"
+              src="./resources/IMG3.jpg"
               alt="Image 3"
             />
+
           </div>
         </div>
         <div class="hero-text-container">
@@ -78,7 +79,7 @@
           <div class="page2-image-section">
             <div class="pg2-content">
               <img
-                src="https://framerusercontent.com/images/esH6YRxCm7u3sVIAWm4uUI7Uk0.jpg"
+                src="./resources/IMG3.jpg"
                 alt="Image 1"
               />
               <div class="pg2-image-text-overly">
@@ -96,7 +97,7 @@
           <div class="page2-image-section page2-image-section-ani">
             <div class="pg2-content">
               <img
-                src="https://framerusercontent.com/images/ddyKmIkEyC9JBH9ye1BWOIMeQ.jpg"
+                src="./resources/IMG2.jpg"
                 alt="Image 2"
               />
               <div class="pg2-image-text-overly">
@@ -114,7 +115,7 @@
           <div class="page2-image-section page2-image-section-ani">
             <div class="pg2-content">
               <img
-                src="https://framerusercontent.com/images/GrKjcZGbmsogDjKYUAwjzDOkXSg.jpg"
+                src="./resources/IMG1.jpg"
                 alt="Image 2"
               />
               <div class="pg2-image-text-overly">
@@ -258,7 +259,7 @@
           <aside class="our-team-left team-card-container">
             <div class="our-team-member">
               <img
-                src="https://framerusercontent.com/images/rmF6nr9brZo8ebe6klIHP2fSws.jpg"
+                src="./resources/TEAMMEMBER1.jpg"
                 alt=""
               />
               <div class="team-member-details">
@@ -268,7 +269,7 @@
             </div>
             <div class="our-team-member">
               <img
-                src="https://framerusercontent.com/images/P5Nddj1X9qhX4SS5c6sXXQvxkEE.jpg"
+                src="./resources/TEAMMEMBER2.jpg"
                 alt=""
               />
               <div class="team-member-details">
@@ -278,7 +279,7 @@
             </div>
             <div class="our-team-member">
               <img
-                src="https://framerusercontent.com/images/YdIhyWDioJxfViSYKkMprSzkBms.jpg"
+                src="./resources/TEAMMEMBER3.jpg"
                 alt=""
               />
               <div class="team-member-details">
@@ -291,7 +292,7 @@
           <aside class="our-team-right team-card-container">
             <div class="our-team-member">
               <img
-                src="https://framerusercontent.com/images/GrTpMr0YpMthaBLkRXe1XXvFoc.jpg"
+                src="./resources/TEAMMEMBER4.jpg"
                 alt=""
               />
               <div class="team-member-details">
@@ -301,7 +302,7 @@
             </div>
             <div class="our-team-member">
               <img
-                src="https://framerusercontent.com/images/alsjB8AOmjcUP66NBWFFSZt8KM.jpg"
+                src="./resources/TEAMMEMBER5.jpg"
                 alt=""
               />
               <div class="team-member-details">
@@ -311,7 +312,7 @@
             </div>
             <div class="our-team-member">
               <img
-                src="https://framerusercontent.com/images/bhWH8l1qOm81GdY4eFlIoLaF9o.jpg"
+                src="./resources/TEAMMEMBER6.jpg"
                 alt=""
               />
               <div class="team-member-details">
