--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -114,6 +114,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="../../script.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
