--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -121,7 +121,7 @@
 
       <section class="join-us-section">
         <div class="join-us-image-container">
-          <img class="join-us-image" src="./image1.webp" alt="" />
+          <img class="join-us-image" src="../../resources/about.webp" alt="" />
         </div>
         <div class="join-us-overlay">
           <h1 class="text-lg-180">Join Us in Crafting the Future</h1>
