added drag ball in contact page

--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -57,6 +57,15 @@
           <h1 class="text-lg-180">GET IN TOUCH</h1>
         </div>
         <div class="contact-footer">
+          <div class="contact-drag-ball drag-ball-smiley">
+            <img src="../../resources/smiley.png" alt="Ball" />
+          </div>
+          <div class="contact-drag-ball drag-ball-star">
+            <img src="../../resources/star.png" alt="Ball" />
+          </div>
+          <div class="contact-drag-ball drag-ball-globe">
+            <img src="../../resources/globe.svg" alt="Ball" />
+          </div>
           <footer class="footer-section">
             <aside class="footer-left">
               <div class="footer-left-head">
