added drag ball in contact page

--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -76,7 +76,7 @@
               <div class="footer-left-mid">
                 <div class="footer-contactus-elem">
                   <h4 class="text-sm-24"><i class="ri-send-plane-line"></i></h4>
-                  <h4 class="text-sm-24">hello@poisontemplate.com</h4>
+                  <h4 class="text-sm-24">Hello@poisontemplate.com</h4>
                 </div>
                 <div class="footer-contactus-elem">
                   <h4 class="text-sm-24"><i class="ri-phone-line"></i></h4>
