added drag ball in contact page

--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -44,10 +44,10 @@
           </div>
           <div class="mobile-nav">
             <h3 class="text-md-56"><a href="../../index.html">Home</a></h3>
-            <h3 class="text-md-56"><a href="../works/work.html">Works</a></h3>
             <h3 class="text-md-56">
-              <a href="../contact/contact.html">Works</a>
+              <a href="../about/about.html">About</a>
             </h3>
+            <h3 class="text-md-56"><a href="../works/work.html">Works</a></h3>
           </div>
         </nav>
       </header>
